# csrc-law-crawler

./: .gitignore  README.md  amac_crawl.py  api.py  asset_text.py  audit_canonical_duplicates.py  baseline_all.py  build_canonical_relations.py  build_catalog.py  build_digest.py  build_source_registry.py  catalog_rules.py  catalog_services.py  client.py  config.py  court_monitor.py  coverage_gaps.py  crawl.py  csrc_law_crawler_audit_report.md  download_assets.py  download_utils.py  enhance.py  export_markdown_catalog.py  export_markdown_laws.py  failure_taxonomy.py  http_policy.py  import_wechat.py  markdown_utils.py  migrate_strict_layout.py  models.py  neris_attachments.py  normalize_catalog.py  normalize_laws.py  parser.py  pass2_relations.py  pass3_cases.py  pass4_writs.py  pipeline.py  prefetch_revision_evidence.py  pyproject.toml  (+16 more)
.github/workflows/: ci.yml
csrc_law_crawler/: __init__.py
csrc_law_crawler/cli/: __init__.py  main.py
csrc_law_crawler/core/: __init__.py  checkpoints.py  context.py  file_store.py  http.py  io.py  locking.py  models.py  paths.py  settings.py  storage.py
csrc_law_crawler/export/: __init__.py  markdown.py
csrc_law_crawler/orchestration/: __init__.py  pipeline.py
csrc_law_crawler/processing/: __init__.py
csrc_law_crawler/sources/: __init__.py  adapters.py  cases.py  court_judicial_interpretation.py  court_judicial_interpretation_monitor.py  court_judicial_interpretation_review_decisions.json  court_judicial_interpretation_sources.json  court_monitor_artifacts.py  digest.py  (+7 more)
docs/: court_judicial_interpretation_monitor.md
schemas/: asset_record.schema.json  canonical_law.schema.json  catalog_entity.schema.json  law_document.schema.json  relation_edge.schema.json  relation_graph.schema.json  source_record.schema.json  writ_document.schema.json
tests/: test_amac_package.py  test_baseline_all.py  test_canonical_relation_exports.py  test_catalog_package.py  test_classification.py  test_core.py  test_court_judicial_interpretation_monitor.py  test_court_judicial_interpretation_source.py  test_crawl_resilience.py  test_curated_catalog_relations.py  test_duplicate_audit.py  test_live_web_crawling.py  test_multi_source.py  test_neris_encoding_repair.py  test_relation_viewer.py  test_storage_package.py
(+54 files in other folders)
